--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Administration</title>
   </head>
-  <body>
+  <body style="background-color: #0d1116">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
