--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Administration</title>
+    <title>Control Plane</title>
   </head>
   <body style="background-color: #0d1116">
     <div id="root"></div>
